snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.md5
d2bfbeb3c3e231c3136249b1186b1b76